[metadata]
name = notion-exporter
version = 0.1.0
description = Export a Notion database to a structured CSV with Markdown-formatted page content
long_description = file: DESIGN.md
long_description_content_type = text/markdown
license = MIT
python_requires = >=3.9

[options]
packages = find:
package_dir = = src
install_requires =
    requests>=2.28
    python-dateutil>=2.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    notion-export = notion_exporter.cli:main
